<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="28dp"
        android:layout_gravity="center">
        <TextView
            android:text="@string/main_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:layout_marginBottom="25dp" />
        <Button
            android:id="@+id/continue_button"
            android:text="@string/continue_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            style="@style/ButtonStyle"
            />
        <Button
            android:id="@+id/new_game_button"
            android:text="@string/new_game_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            style="@style/ButtonStyle"
            />
        <Button
            android:id="@+id/options_button"
            android:text="@string/options_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            style="@style/ButtonStyle"
            />
        <Button
            android:id="@+id/about_button"
            android:text="@string/about_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            style="@style/ButtonStyle"
            />
    </LinearLayout>
</ScrollView>
